Update in updateTaskComponent task

--- a/src/app/task/update-task/update-task.component.html
+++ b/src/app/task/update-task/update-task.component.html
@@ -1,6 +1,6 @@
 <form class="addTask" [formGroup]="taskForm" (ngSubmit)="onSubmit()">
 	<h4 class="addTaskHeader">
-		Task Create
+		Edit Task
 	</h4>
 	<br>
 
@@ -27,12 +27,9 @@
 <br>
 <br>
 	<input type="button" class="button redButton" value="Cancel">
-	<input class="button blueButton" type="submit" value="Add">
+	<input class="button blueButton" type="submit" value="Update">
 	<br>
-  <!-- <p>{{credentials | json}}</p> -->
 </form>
-
-  <!--  -->
 
 
 
